phalanx_codegen/tests/ui/requires-client.stderr
error: phalanx requires a client type, i.e. `#[phalanx(MyClient)]`
 --> $DIR/requires-client.rs:8:1
  |
8 | #[phalanx]
  | ^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
